--- a/slider/index.html
+++ b/slider/index.html
@@ -54,8 +54,9 @@
     </section>
 
 
-    <script type="text/javascript">
-      const imgBx = document.querySelector('imgBx');
+    <script>
+
+      const imgBx = document.querySelector('.imgBx');
       const slides = imgBx.getElementsByTagName('img');
       var i = 0;
 
@@ -72,20 +73,22 @@
       }
 
 
-      const contentBx = document.querySelector('contentBx');
-      const slidesText = contentBx.getElementsByTagName('img');
+      const contentBx = document.querySelector('.contentBx');
+      const slidesText = contentBx.getElementsByTagName('div');
       var j = 0;
 
       function nextSlideText() {
-        slides[j].classList.remove('active');
+        slidesText[j].classList.remove('active');
         j = (j + 1) % slidesText.length;
         slidesText[j].classList.add('active');
       }
 
       function prevSlideText() {
         slidesText[j].classList.remove('active');
-        j = (j - j + slidesText.length) % slidesText.length;
-        slidesText[i].classList.add('active');
+        j = (j - 1 + slidesText.length) % slidesText.length;
+        slidesText[j].classList.add('active');
+      }
+
     </script>
 
   </body>
