--- a/slider/index.html
+++ b/slider/index.html
@@ -18,32 +18,32 @@
 
     <section class="banner">
       <div class="imgBx">
-        <img src="https://i.pinimg.com/originals/09/6d/f0/096df0eb195b8f0d9475924f9a1e9425.jpg" alt="" class="active">
-        <img src="https://image.winudf.com/v2/image/Y29tLmZtMzYwLnRoZWJlc3RhbmltZXdhbGxwYXBlcl9zY3JlZW5fMF8xNTE1ODc5MzcwXzAxNQ/screen-0.jpg?fakeurl=1&type=.jpg" alt="">
-        <img src="https://wallpaperset.com/w/full/9/1/e/225292.jpg" alt="">
-        <img src="https://images.wallpapersden.com/image/download/tanjirou-kamado-from-demon-slayer_67909_1920x1080.jpg" alt="">
+        <img src="https://images6.alphacoders.com/629/thumb-1920-629544.jpg" alt="" class="active">
+        <img src="https://images6.alphacoders.com/740/thumb-1920-740296.png" alt="">
+        <img src="https://images5.alphacoders.com/525/thumb-1920-525926.jpg" alt="">
+        <img src="https://images3.alphacoders.com/666/thumb-1920-666312.jpg" alt="">
       </div>
 
       <div class="contentBx">
         <div class="active">
-          <h2>Slide 1</h2>
-          <p>Lorem ipsum dolor sit amet, consect</p>
-          <a href="#">details</a>
+          <h2>Токийский гуль</h2>
+          <p>экшен, драма, сейнен, ужасы, мистика</p>
+          <a href="#">Подробнее</a>
         </div>
         <div>
-          <h2>Slide 2</h2>
-          <p>Lorem ipsum dolor sit amet, consect</p>
-          <a href="#">details</a>
+          <h2>Твоё имя</h2>
+          <p>приключения, романтика, драма, мистика</p>
+          <a href="#">Подробнее</a>
         </div>
         <div>
-          <h2>Slide 3</h2>
-          <p>Lorem ipsum dolor sit amet, consect</p>
-          <a href="#">details</a>
+          <h2>Мастера меча онлайн</h2>
+          <p>фэнтези, приключения, романтика, драма, сейнен</p>
+          <a href="#">Подробнее</a>
         </div>
         <div>
-          <h2>Slide 4</h2>
-          <p>Lorem ipsum dolor sit amet, consect</p>
-          <a href="#">details</a>
+          <h2>Ванпанчмен</h2>
+          <p>экшен, комедия, фантастика, сейнен, супер сила</p>
+          <a href="#">Подробнее</a>
         </div>
       </div>
 
@@ -52,7 +52,6 @@
         <li onclick="nextSlide();nextSlideText()"></li>
       </ul>
     </section>
-
 
     <script>
 
